--- a/index.html
+++ b/index.html
@@ -17,18 +17,18 @@
           </form>
         </div>
         <div class="weather-graphic">
-          <image id="weather-graphic"></image>
+          <img id="weather-graphic"></img>
         </div>
         <div class="temperature">
           <p>0<sup>&deg;F</sup></p>
         </div>
         <div class="humidity">
-          <image src="resources/static/droplet-solid.svg"></image>
+          <img src="resources/static/droplet-solid.svg"></img>
           <p id="humidity">0%</p>
           <p class="humidity-label">Humidity</p>
         </div>
         <div class="wind">
-          <image src="resources/static/wind-solid.svg"></image>
+          <img src="resources/static/wind-solid.svg"></img>
           <p id="wind">0 mp/h</p>
           <p class="wind-label">Wind Speed</p>
         </div>
